# omniretargeting

./: AGENTS.md  README.md  pyproject.toml  setup.py
agents/: CommonAgentInstructions.md  PROGRESS.md
config_templates/: README.md  lafan1_template.yaml  omomo_floorlamp_example.yaml  omomo_template.yaml  smplx_template.yaml
docs/: ADDING_SOURCE_ADAPTERS.md
omniretargeting/: __init__.py  core.py  main.py  retargeting.py  robot_config.py  utils.py  visualizer.py
omniretargeting/data_sources/: __init__.py  base.py  bvh_visualize.py  lafan1.py  omomo.py  registry.py  smplx.py  smplx_visualize.py
robot_models/: README.md
robot_models/booster_k1/: booster_k1.json
robot_models/hightorque_mini_pi_plus/: hightorque_mini_pi_plus.json
robot_models/unitree_g1/: unitree_g1.json
robot_models/unitree_h1/: unitree_h1.json
tests/: test_basic.py  test_objects.py  test_omomo_integration.py  test_validation.py
tests/data_sources/: __init__.py  test_lafan1.py  test_smplx.py
tests/resources/omomo/: case_01_clothesstand.json  case_02_floor_lamp.json  case_03_large_box.json
